# applicant-screening

./: .env.sample  .gitignore  README.md  jobpost.py  main.py  prompt.py  pyproject.toml  sample.csv  updated_sample.csv
